Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84046

TableView contentHeight is unable to calculate height with word wrapping

    XMLWordPrintable

Details

    • macOS

    Description

      TableView contentHeight is unable to get proper height when word wrapping is on for the first time, It works in susequently.
      Attached example reproduces it:
      Steps:
      -Run the example
      -click Build1 (you see new line text due to word wrap is overlapping)
      -click Build2 this works good
      -click Build1 again and now it works.
      -click Clear and click Build1 again, problem is shown again.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            richard Richard Moe Gustavsen
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes